# ufcee

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  pyproject.toml
.claude/: settings.json
.claude/agent-memory/: COORDINATION.md  DEPS.md  PERF_BUDGETS.md  README.md  TASKS.md
.claude/agent-memory/DECISIONS/: 0001-meta-config.md  0002-workspace-layout.md  0003-adapter-contract.md  0004-server-architecture.md  0005-routing-precedence.md
.claude/agents/: L1-dependency-tracker.md  L1-memory-coordinator.md  L1-orchestrator.md  L1-task-router.md  L2-adapter-custom-contract.md  L2-adapter-docling.md  L2-adapter-kreuzberg.md  L2-adapter-markitdown.md  L2-adapter-paddleocr.md  L2-adapter-tika.md  L2-adapter-unstructured.md  L2-api-designer.md  L2-circuit-breaker-designer.md  L2-config-loader.md  L2-ext-router.md  L2-facade-selector.md  L2-mime-router.md  L2-normalizer-designer.md  L2-pyo3-bridge.md  L2-python-sdk-designer.md  L2-rate-limit-designer.md  L2-response-normalizer.md  L2-routing-engine.md  L2-secrets-handler.md  L2-ssrf-defender.md  L2-streaming-spool-expert.md  L2-system-architect.md  L3-code-reviewer.md  L3-contract-test-enforcer.md  L3-doc-writer.md  L3-feature-planner.md  L3-fuzz-test-author.md  L3-integration-test-author.md  L3-performance-reviewer.md  L3-property-test-author.md  L3-pyo3-implementer.md  L3-python-implementer.md  L3-rust-implementer.md  L3-security-reviewer.md  L3-unit-test-author.md  (+12 more)
.claude/hooks/lib/: slop_patterns.txt
.claude/hooks/scripts/: dump_state.sh  guard_bash.sh  guard_commit_message.sh  inject_coordination.sh  no_ai_slop.sh  post_lint_python.sh  post_lint_rust.sh  post_slop_scan.sh  session_start.sh  session_summary.sh
.claude/output-styles/: ucee-house.md
.claude/rules/: adapter-contract.md  commit-message-rules.md  observability-rules.md  pyo3-rules.md  python-style.md  routing-rules.md  rust-style.md  security-rules.md  tokio-async-rules.md
.claude/skills/agent-coordinate/: SKILL.md
.claude/skills/bench/: SKILL.md
.claude/skills/cleanup-ai-slop/: SKILL.md
.claude/skills/contract-test/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/normalizer-validate/: SKILL.md
.claude/skills/perf-budget-check/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review-branch/: SKILL.md
.claude/skills/scaffold-adapter/: SKILL.md
.claude/skills/scaffold-crate/: SKILL.md
.claude/skills/scaffold-pyo3-binding/: SKILL.md
.claude/skills/snapshot-arch/: SKILL.md
.claude/skills/spec-feature/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.claude/skills/sync-helm/: SKILL.md
.claude/skills/threat-model/: SKILL.md
.github/workflows/: audit.yml  ci.yml  meta-config.yml
crates/ucee/: Cargo.toml
crates/ucee-adapter-docling/: Cargo.toml
crates/ucee-adapter-docling/src/: client.rs  lib.rs
crates/ucee-adapter-docling/tests/: contract.rs
crates/ucee-adapters-fixtures/: Cargo.toml
crates/ucee-adapters-fixtures/src/: lib.rs
crates/ucee-config/: Cargo.toml
crates/ucee-config/src/: lib.rs
crates/ucee-core/: Cargo.toml
crates/ucee-core/src/: adapter.rs  error.rs  lib.rs  registry.rs
crates/ucee-observability/: Cargo.toml
crates/ucee-observability/src/: lib.rs
crates/ucee-resilience/: Cargo.toml
crates/ucee-resilience/src/: lib.rs
crates/ucee-router/: Cargo.toml
crates/ucee-router/src/: error.rs  ext.rs  lib.rs  mime_sniff.rs  router.rs
crates/ucee-router/tests/: properties.rs
crates/ucee-server/: Cargo.toml
crates/ucee-server/src/: lib.rs  state.rs
crates/ucee-server/src/routes/: convert.rs  mod.rs  ops.rs
crates/ucee-server/tests/: integration.rs
crates/ucee-ssrf/: Cargo.toml
crates/ucee-ssrf/src/: lib.rs
crates/ucee-streaming/: Cargo.toml
crates/ucee-streaming/src/: lib.rs
crates/ucee/src/: main.rs
