[package]
name = "ucee-config"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Three-layer configuration loader for UCEE Proxy"

[dependencies]
ucee-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
figment.workspace = true
thiserror.workspace = true

[lints]
workspace = true
