[package]
name = "ucee-observability"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Logs, metrics, and traces for UCEE Proxy"

[dependencies]
ucee-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true

[lints]
workspace = true
